--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Search</title>
-    <link rel="stylesheet" href="/movies.css">
-    <link rel="stylesheet" href="/fontawesome-free-5.15.2-web/fontawesome-free-5.15.2-web/css/all.css">"
+    <link rel="stylesheet" href="movies.css">
+    <link rel="stylesheet" href="fontawesome-free-5.15.2-web/fontawesome-free-5.15.2-web/css/all.css">"
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
 </head>
@@ -41,7 +41,7 @@
             <input type="text" class="search" placeholder="search for movies">
             <button class="btn" onclick="revert()"><i class="fas fa-search"></i></button>
         </div>
-        <script src="/movies.js"></script>
+        <script src="movies.js"></script>
     </div>
 
 
